test/libsolidity/syntaxTests/imports/import_does_not_clutter_importee.sol
==== Source: a ====
contract C { D d; }
==== Source: b ====
import "a"; contract D is C {}
// ----
// DeclarationError: (a:13-14): Identifier not found or not unique.
